2008-02-10  Bradley M. Kuhn  <bkuhn@ebb.org>

	* tests/test-pokeravatar.py.in (PokerAvatarTestCase.test06_setRoles)
	(PokerAvatarTestCase.test05_testStrInterpolation): Callback function
	should return (client, packet).

2008-02-09  Bradley M. Kuhn  <bkuhn@ebb.org>

	* tests/test-pokeravatar.py.in
	(PokerAvatarTestCase.test04_createTable): Wrote function.
	(PokerAvatarTestCase.test05_testStrInterpolation): Wrote funciton.
	(PokerAvatarTestCase.test04_createTable.handleTable): Wrote function.

	* pokernetwork/pokeravatar.py (PokerAvatar.__str__): Fixed bug;
	stringification shouldn't have a print in it.

2008-02-02  Bradley M. Kuhn  <bkuhn@ebb.org>

	* Release 1.3.0

	* tests/test-pokerdatabase.py.in
	(PokerDatabaseTestCase.tearDown): Added code to delete the test user.
	(Run): Used VerboseTextReporter instead of regular TextReporter.
	(PokerDatabaseTestCase.test04_rootBothUsers): Added catch for
	exception when it attempts to recreate the root user.
	(PokerDatabaseTestCase.setUp): Added a tearDown() call just in
	case cruft is left around.
	(PokerDatabaseTestCase.test07_multipleRowsInVersionTable): Wrote function.
	(PokerDatabaseTestCase.test08_forceTestDatabaseTooOld): Wrote function.
	(PokerDatabaseTestCase.test09_forceTestPokerNetworkTooOld): Wrote function.
	(PokerDatabaseTestCase.test10_badUpgradeSqlFiles): Wrote function.
	(PokerDatabaseTestCase.test01_upgrade): Changed directory for
	upgrade scripts to .../good.

2008-02-01  Bradley M. Kuhn  <bkuhn@ebb.org>

	* tests/test-pokerdatabase.py.in: Fixed name test user to not be
	the same as the database.

2008-01-31  Bradley M. Kuhn  <bkuhn@ebb.org>

	* tests/test-pokerdatabase.py.in
	(PokerDatabaseTestCase.test05_missingRootUser): Wrote function.
	(PokerDatabaseTestCase.tearDown): Made separate try for each
	operation.
	(PokerDatabaseTestCase.test06_databaseAlreadyExists): Wrote function.

2008-01-29  Bradley M. Kuhn  <bkuhn@ebb.org>

	* tests/test-pokerdatabase.py.in